# VocabularyBooster/ClientApp/src/app/data/api/models.ts
@@ -1,4 +1,3 @@
 export { Sense } from './models/sense';
 export { Text } from './models/text';
-export { WeatherForecast } from './models/weather-forecast';
 export { Word } from './models/word';
