# VocabularyBooster/ClientApp/src/app/data/api/models/weather-forecast.ts
@@ -1,7 +1,0 @@
-/* tslint:disable */
-export interface WeatherForecast {
-  date?: string;
-  summary?: null | string;
-  temperatureC?: number;
-  temperatureF?: number;
-}
