# VocabularyBooster/ClientApp/src/app/data/api/services.ts
@@ -1,3 +1,2 @@
 export { TextService } from './services/text.service';
-export { WeatherForecastService } from './services/weather-forecast.service';
 export { WordService } from './services/word.service';
